# Orca

./: COPYING  README.md  flake.nix
Docs/: CP.md  Missing.md
FPGA/Orca/: CMakeLists.txt  Orca.cpp  dt.txt
FPGA/Orca/Krita/: FanController.cpp  FanController.h  System.cpp  System.h  TemperatureSensors.cpp  TemperatureSensors.h
FPGA/Orca/Krita/Hardware/: TTC.h
Firmware/DspMicrocode/: Instruction.h  NormalTransformMicrocode.h  PositionTransformMicrocode.h  README.md  TexcoordTransformMicrocode.h  generate.sh  main  main.c
Firmware/DspMicrocode/gens/: NormalTransformMicrocodeA.mem  NormalTransformMicrocodeB.mem  NormalTransformMicrocodeC.mem  PositionTransformMicrocodeA.mem  PositionTransformMicrocodeB.mem  PositionTransformMicrocodeC.mem  TexcoordTransformMicrocodeB.mem
Firmware/RISCV/bootloader/: main.c  make.sh  sections.lds  soc.h
Firmware/RISCV/firmware/: SystemAPI.c  SystemAPI.h  main.c  make.sh  sections.lds  soc.h  start.s
RTL/Docs/: CP.md  Missing.md
RTL/Flipper/: CPUIFace.v  FlipperTop.v  WPAR.v
RTL/Flipper/CP/: CPRegisters.v  CPTop.v  GXWPAR.v  GXWPARFIFO.v  GXWPARMaster.v
RTL/Flipper/Control/: CommandDeserializer.v  CommandProcessor.v  CoordFormater.v
RTL/Flipper/DSP/: MatrixDSP.v  MatrixDSPMemory.v  MatrixDSPUnit.v.bak
RTL/Flipper/TestCores/: MatrixDSDCore.v  NormalTestCore.v  NormalTestCore.v.bak  PositionUnitCore.v  PositionUnitCore.v.bak
RTL/Flipper/XF/: MatrixPort.v  NormalUnit.v  NormalUnit.v.bak  PositionUnit.v  TexCoordRegularUnit.v  TransformUnit.v  XFTop.v
RTL/RTL/: RVTest.v
RTL/RTL/Flipper/: CPUIFace.v  FlipperTop.v
RTL/RTL/Flipper/Control/: CommandDeserializer.v
RTL/RTL/Flipper/DSP/: MatrixDSP.v  MatrixDSPUnit.v
RTL/RTL/Flipper/TestCores/: DspCore.v
RTL/RTL/Flipper/XF/: MatrixPort.v  PositionMatrix.v  XFTop.v
RTL/RTL/SoC/: RISCVSoc.v  SystemUART.v
RTL/SoC/: RISCVSoc.v.bak  SystemButtonGPIO.v  SystemLEDGPIO.v  SystemRAM.v  SystemROM.v  SystemTimmer.v
Simulator/: CMakeLists.txt  Testing.cpp
Simulator/CommandInterface/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandInterface.cpp  CommandInterface.hpp
Simulator/Flipper/: CMakeLists.txt  DebugUtils.cpp  DebugUtils.h  Flipper.cpp  Flipper.h  README.md
Simulator/Flipper/GX/: CP.cpp  CP.h
Simulator/LowlevelAPI/: CMakeLists.txt  CP.cpp  CP.h
Simulator/TestBench/: CMakeLists.txt  Interrupt.cpp  Interrupt.h  TbCommandInterface.cpp  TbCommandInterface.h  TbServer.cpp  TbServer.h  TestBench.cpp  TestBench.h
Simulator/TestBench/AXI/: AXIHostIF.cpp  AXIHostIF.h  AXILiteIF.cpp  AXILiteIF.h  AXIReadIF.cpp  AXIReadIF.h  AXIRefrence.cpp  AXIRefrence.h
Software/: Flipper.xsa  README.md  system-user.dtsi
Software/Orca/: CMakeLists.txt  Orca.cpp  README.md
Software/Orca/Flipper/: CMakeLists.txt  DebugUtils.cpp  DebugUtils.h  Flipper.cpp  Flipper.h  MemoryMap.h  README.md
Software/Orca/Krita/: CMakeLists.txt  FanController.cpp  FanController.h  Memory.cpp  Memory.h  System.cpp  System.h  TemperatureSensors.cpp  TemperatureSensors.h  TrafficGenerator.cpp  TrafficGenerator.h  UIO.cpp  UIO.h
Software/OrcaBoot/: CMakeLists.txt  Fox.c  Init.c  Init.h  KernelLoader.c  KernelLoader.h  OrcaBoot.c  README.MD  SplashScreen.c  SplashScreen.h  boot.txt  sections.ld  start.s
Software/OrcaBoot/CFox/: CFox.h  CMakeLists.txt  File.c  File.h  IO.c  IO.h  Memory.c  Memory.h  String.c  String.h
(+8 files in other folders)
